
class Consts:
    """
    Contains global consts variables
    """
    CURRENCY_TYPE = "dollar"
    JSON_DIR_PATH_TESTS = "aviela_home_assignment\\json"
    JSON_DIR_PATH_PROGRAM = "json"
    PRODUCT_DATA_JSON_FILE = "\\ProductData.json"
    MONEY_DATA_JSON_FILE = "\\MoneyData.json"
    COINS_DATA_JSON_FILE = "\\CoinsData.json"
    PRODUCT_DATA_DUMP_JSON_FILE = "\\ProductDataDump.json"
    MONEY_DATA_DUMP_JSON_FILE = "\\MoneyDataDump.json"
    COINS_DATA_DUMP_JSON_FILE = "\\CoinsDataDump.json"
    DRINK = "Drink"
    SNACK = "Snack"
    ALL = "All"

    '''
    The following consts used for Serialization so I wrote them on camel case 
    '''
    iVmChangeMoney = "_iVmChangeMoney"
    iCustomerMoney = "_iCustomerMoney"
    iCustomerChangeMoney = "_iCustomerChangeMoney"

    iUid = "_iUid"
    sName = "_sName"
    iPrice = "_iPrice"
    iQuantity = "_iQuantity"
    sProductFamily = "_sProductFamily"
    bSweet = "_bSweet"
    bSparkling = "_bSparkling"
